# file

./: CMakeLists.txt
cmake/: ConfigureChecks.cmake  config.h.in
doc/: CMakeLists.txt
magic/: CMakeLists.txt
python/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  magic.h.in
src/cmake/: ConfigureChecks.cmake
